--- a/stable/mongodb/values.yaml
+++ b/stable/mongodb/values.yaml
@@ -6,7 +6,7 @@
 #   imageRegistry: myRegistryName
 #   imagePullSecrets:
 #     - myRegistryKeySecretName
-#   storageClass: myStorageClass
+   storageClass: cephfs
 
 image:
   ## Bitnami MongoDB registry
@@ -189,16 +189,22 @@ podLabels: {}
 ## Configure resource requests and limits
 ## ref: http://kubernetes.io/docs/user-guide/compute-resources/
 ##
-resources: {}
+resources: 
+ limits:
+   cpu: 100m
+   memory: 256Mi
+ requests:
+   cpu: 100m
+   memory: 256Mi
 # Define separate resources per arbiter, which are less then primary or secondary
 # used only when replica set is enabled
 resourcesArbiter: {}
-# limits:
-#   cpu: 500m
-#   memory: 512Mi
-# requests:
-#   cpu: 100m
-#   memory: 256Mi
+ limits:
+   cpu: 100m
+   memory: 256Mi
+ requests:
+   cpu: 100m
+   memory: 256Mi
 
 ## Pod priority
 ## https://kubernetes.io/docs/concepts/configuration/pod-priority-preemption/
@@ -251,9 +257,9 @@ persistence:
   ##   set, choosing the default provisioner.  (gp2 on AWS, standard on
   ##   GKE, AWS & OpenStack)
   ##
-  # storageClass: "-"
+   storageClass: cephfs
   accessModes:
-    - ReadWriteOnce
+    - ReadWriteMany
   size: 8Gi
   annotations: {}
 
